[package]
name = "crap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
h2 = "0.4.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
lru = "0.12.1"
mobc = "0.8.3"
mobc-redis = "0.8.2"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
redis = "0.24.0"
tokio = { version = "1.35.1", features = ["full"] }
